...
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inifoto2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnunfollow"
        android:layout_width="216dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:background="#F9FCFC"
...
