...
        android:text="@string/followers"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewFollow"
        app:layout_constraintStart_toEndOf="@+id/textViewFollow"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnfollow"
        android:layout_width="216dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:background="#00BCD4"
...
