<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_bubble_outline_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/ic_photo_camera_black_24dp"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_ads"
        android:icon="@drawable/ic_description_black_24dp"
        android:title="@string/title_ads" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_acc" />

</menu>
